{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 111,
  "lineage": "dcd19a66-1967-3c8c-72fa-d6592e8fa83d",
  "resources": [
    {
      "module": "module.mongo_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "machine",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cb72367e98845d43",
            "arn": "arn:aws:ec2:us-west-2:691706418819:instance/i-03178e7e57cf50756",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03178e7e57cf50756",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "mongo_key",
            "monitoring": false,
            "primary_network_interface_id": "eni-025bad4f675402fe2",
            "private_dns": "ip-10-0-1-10.us-west-2.compute.internal",
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-35-164-131-132.us-west-2.compute.amazonaws.com",
            "public_ip": "35.164.131.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-06fc5e3020179c720",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00e26e49a2ed4093b",
            "tags": {
              "Environment": "default",
              "Name": "Mongo Master",
              "created_by": "Terraform"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-042cbdc7166833716",
              "sg-0b8c60cebbb349f6c"
            ]
          }
        }
      ]
    },
    {
      "module": "module.main_internet_gw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0a9ba753020c34c8a",
            "owner_id": "691706418819",
            "tags": {
              "Environment": "default",
              "Name": "Mongo Internet GW",
              "created_by": "Terraform"
            },
            "vpc_id": "vpc-090bec6a3ee625242"
          }
        }
      ]
    },
    {
      "module": "module.main_internet_gw",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dcb5c2f218a693b0",
            "owner_id": "691706418819",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a9ba753020c34c8a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "default",
              "Name": "Default Route Table for Mongo Internet GW",
              "created_by": "Terraform"
            },
            "vpc_id": "vpc-090bec6a3ee625242"
          },
          "depends_on": [
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "module": "module.main_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets_assoc",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e3e3713884d91d0",
            "route_table_id": "rtb-0dcb5c2f218a693b0",
            "subnet_id": "subnet-00e26e49a2ed4093b"
          },
          "depends_on": [
            "aws_subnet.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-047977b59cdf0dac3",
            "route_table_id": "rtb-0dcb5c2f218a693b0",
            "subnet_id": "subnet-0cbe902a37a76eb59"
          },
          "depends_on": [
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_mongo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:691706418819:security-group/sg-0b8c60cebbb349f6c",
            "description": "Allow MongoDB inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8c60cebbb349f6c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "Allow Mongo",
            "name_prefix": null,
            "owner_id": "691706418819",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-090bec6a3ee625242"
          },
          "depends_on": [
            "module.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:691706418819:security-group/sg-042cbdc7166833716",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042cbdc7166833716",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow SSH",
            "name_prefix": null,
            "owner_id": "691706418819",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-090bec6a3ee625242"
          },
          "depends_on": [
            "module.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.main_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:691706418819:subnet/subnet-00e26e49a2ed4093b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00e26e49a2ed4093b",
            "map_public_ip_on_launch": true,
            "owner_id": "691706418819",
            "tags": {
              "Environment": "default",
              "Name": "Zona de Mongo",
              "created_by": "Terraform"
            },
            "vpc_id": "vpc-090bec6a3ee625242"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:691706418819:subnet/subnet-0cbe902a37a76eb59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0cbe902a37a76eb59",
            "map_public_ip_on_launch": true,
            "owner_id": "691706418819",
            "tags": {
              "Environment": "default",
              "Name": "Zona de Mongo 2",
              "created_by": "Terraform"
            },
            "vpc_id": "vpc-090bec6a3ee625242"
          }
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mongo_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:691706418819:vpc/vpc-090bec6a3ee625242",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f5ea685dcb2e5f9c",
            "default_route_table_id": "rtb-0ad0caadb71ae2326",
            "default_security_group_id": "sg-00f7ea9a97b0003cd",
            "dhcp_options_id": "dopt-b8c9b7df",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-090bec6a3ee625242",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ad0caadb71ae2326",
            "owner_id": "691706418819",
            "tags": {
              "Environment": "default",
              "Name": "Mongo Training VPC",
              "created_by": "Terraform"
            }
          }
        }
      ]
    }
  ]
}